Fix Edge banner display
Also center-justify team images on their cards

--- a/src/app/pages/team/people-tab/people-tab.scss
+++ b/src/app/pages/team/people-tab/people-tab.scss
@@ -58,7 +58,7 @@
             display: grid;
             grid-gap: 1rem;
             height: fit-content;
-            place-items: center;
+            justify-items: center;
             text-align: center;
 
             .bio {
