--- a/src/app/pages/home/banner-carousel/banner-carousel.scss
+++ b/src/app/pages/home/banner-carousel/banner-carousel.scss
@@ -48,7 +48,7 @@
         display: flex;
         height: 100%;
         position: relative;
-        width: fit-content;
+        width: 500%; // Space for 5 banners. Fewer is ok.
 
         > * {
             background-position: left center;
