--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -1,9 +1,9 @@
 <template args="model">
         <div class="search_container" id="search_container">
         <div class="search" id="search">
-                        <div><input id="srch_input" class="srch" type="text" placeholder="Search by country, state, city, or institution name"></input></div>
-                        <div><img class="searchimg" src="./images/home/search.png" alt=""></div>
-                        <div><button class="filter_btn" value="0">
+                        <div id="search_input_div"><input id="srch_input" class="srch" type="text" placeholder="Search by country, state, city, or institution name"></input></div>
+                        <div id="search_img_div"><img class="searchimg" src="./images/home/search.png" alt=""></div>
+                        <div id="search_filter_div"><button class="filter_btn" value="0">
                                 <span id="filter_icons">
                                         <span id='filter_style' class="fas fa-sliders-h"></span>
                                 </span>
