--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -1,5 +1,6 @@
 <template args="model">
         <div class="search_container" id="search_container">
+        <div id="backToSearch_div" class="backToSearch_div"><button id="backToSearch_btn" class="backToSearch_btn"><i class="fas fa-arrow-left left_arrow_bak"></i></button></div>
         <div class="search" id="search">
                         <div id="search_input_div"><input id="srch_input" class="srch" type="text" placeholder="Search by country, state, city, or institution name"></input></div>
                         <div id="search_img_div"><img class="searchimg" src="./images/home/search.png" alt=""></div>
