Have at most one main tag per page
Or none.

--- a/src/app/components/shell/shell.html
+++ b/src/app/components/shell/shell.html
@@ -7,5 +7,5 @@
 </div>
 <header id="header"></header>
 <div id="dialog"></div>
-<main id="main"></main>
+<div id="main"></div>
 <footer id="footer"></footer>
