--- a/src/app/pages/adoption-confirmation/adoption-confirmation.html
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.html
@@ -2,7 +2,6 @@
 <div class="strip-container">
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
 </div>
-<div class="content">
-    <div class="followup-form">
-    </div>
-</div>
+<main class="content">
+    <div class="followup-form" skip="true"></div>
+</main>
