Bookstore suppliers page updates
Handle blank description
Use updated banner image
Move download button to top

--- a/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
+++ b/src/app/pages/bookstore-suppliers/bookstore-suppliers.scss
@@ -128,6 +128,7 @@
 
         @include width-up-to($phone-max) {
             background-color: ui-color(white);
+            grid-gap: 4rem;
             padding-top: 8rem;
             z-index: 1;
 
