adding marker to navigate point on map and making mobile screen of detail of list element

--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -1,6 +1,8 @@
 <template args="model">
         <div class="search_container" id="search_container">
         <div id="backToSearch_div" class="backToSearch_div"><button id="backToSearch_btn" class="backToSearch_btn"><i class="fas fa-arrow-left left_arrow_bak"></i></button></div>
+        <div id="backToResult_div" class="backToResult_div"><button id="backToResult_btn" class="backToResult_btn"><i class="fas fa-arrow-left left_arrow_bak"></i></button></div>
+        <div class="search-div-container">
         <div class="search" id="search">
                         <div id="search_input_div"><input id="srch_input" class="srch" type="text" placeholder="Search by country, state, city, or institution name"></input></div>
                         <div id="search_img_div"><img class="searchimg" src="./images/home/search.png" alt=""></div>
@@ -49,6 +51,7 @@
                                 </div>
                         </div>
                 </div>
+        </div>
                 <div class="maptxt" id="maptxt">
                                 we're changing the world, one book at a time!
                 </div> 
