--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -29,6 +29,14 @@
             padding-top: 20rem;
         }
     }
+    .search-div-container {
+        width: 63.4rem;
+        box-shadow: 0 10px 30px 0 rgba(0,0,0,0.3);
+        @include width-up-to($phone-max) {
+            width: 100%;
+            order: 2;
+        }
+    }
     #map {
         position: relative;
         height: 74rem;
@@ -84,7 +92,6 @@
             width: 100%;
             height: 5rem;
             justify-content: space-around;
-            order: 2;
             #search_input_div {
                 order: 2;
             }
@@ -116,12 +123,14 @@
             }
         }
     }
-    #backToSearch_div {
+    .backToSearch_div,
+    .backToResult_div {
         display: none;
         order: 2;
         margin-bottom: 1rem;
     }
-    #backToSearch_btn {
+    .backToSearch_btn,
+    .backToResult_btn {
         width: 4rem;
         height: 4rem;
         border-radius: 28px;
@@ -196,7 +205,6 @@
             transform: translateX(12px);
         }
         #dropDownList_id {
-            order: 3;
             width: 100%;
             border-top: unset;
         }
@@ -407,21 +415,27 @@
         font-size: 14px;
         font-weight: bold;
         line-height: 17px;
+        padding-bottom: 1rem;
     }
     .tdlb_container {
         padding: 5rem 2rem 3rem 2rem;
         @include width-up-to($phone-max) {
-            margin-top: 4px;
-            margin-left: 8px;
+            padding: 1rem;
         }
     }
     .tdlb_para {
         display: flex;
         flex-direction: row;
+        @include width-up-to($phone-max) {
+            flex-direction: column;
+        }
     }
     .para_quote {
         font-size: 18px;
         color: #F66400;
+        @include width-up-to($phone-max) {
+            font-size: 1.2rem;
+        }
     }
     .tdl_body_desc {
         padding-top: 0.7rem;
@@ -455,11 +469,6 @@
         line-height: 25px;
         text-align: right;
         margin-top: unset;
-    }
-    .testimonial_Mobclick{
-        position: absolute;
-        top: -133px;
-        right: -107px;
     }
     .filter_btn {
         border: 1px solid #D5D5D5;
