--- a/src/app/pages/impact-dev/map/mapdropdown.html
+++ b/src/app/pages/impact-dev/map/mapdropdown.html
@@ -4,7 +4,7 @@
         </div>
     <ul if="model.length!=0 && model!='empty_result'" class="search_list">
         <li each="element in model.lData" class="search_list_element">
-            <div class="toggle_on_off" id="show-{element.pk}" data-toggle="show" data-long="{element.fields.long}" data-lat="{element.fields.lat}">
+            <div class="toggle_on_off" id="show-{element.pk}" data-toggle="show" data-long="{element.fields.long}" data-lat="{element.fields.lat}" data-name="{element.fields.name}" data-city="{element.fields.physical_city}">
                 <div class="list_data">
                     <div class="list_heading">{element.fields.name}</div>
                     <div class="list_address">{element.fields.physical_city}, {element.fields.physical_state_province}</div>
@@ -19,8 +19,8 @@
                         <div class="left_column_inner">
                             <div class="lColumn_head">Student savings</div>
                             <div class="lColumn_body">
-                                <div class="lCol_body_left">This year: $327,000</div>
-                                <div class="lCol_body_right">Cumulative: $1,023,016</div>
+                                <div class="lCol_body_left">This year: ${element.fields.current_year_savings}</div>
+                                <div class="lCol_body_right">Cumulative: ${element.fields.all_time_savings}</div>
                             </div>
                         </div>
                     </div>
