--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -1,7 +1,7 @@
 <template args="model">
     <form class="body-block" method="post" action="{model.postEndpoint}"
      enctype="multipart/form-data">
-        <input type="hidden" name="submitted_by" value="{model.submittedBy}" />
+        <input type="hidden" name="submitted_by_account_id" value="{model.submittedBy}" />
         <div class="question">Select a subject.</div>
         <span class="invalid-message">{model.validationMessage('book')}</span>
         <div skip="true"></div>
