adding border radius to stats grid images

--- a/src/app/pages/impact-dev/statistics/stat.scss
+++ b/src/app/pages/impact-dev/statistics/stat.scss
@@ -68,13 +68,14 @@
     }
     .col-img {
         width: 100%;
+        border-radius: 3px 3px 0 0
     }
     .col-img-div {
     height: 14.8rem;
     }
     .col-txt {
         width: 26rem;
-        height: 21rem;
+        height: 21.2rem;
         background-color: #FFFFFF;
         border-radius: 0 0 3px 3px;
         display: flex;
